Initial Server side protocol handling
-Added threading for each new connection
-Passes control off to client authentication (not yet completed)

--- a/LoF_Server/.cproject
+++ b/LoF_Server/.cproject
@@ -42,6 +42,7 @@
 								</option>
 								<option id="gnu.cpp.link.option.libs.1383190881" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="LoF_Common"/>
+									<listOptionValue builtIn="false" value="pthread"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1833692981" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
