--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .metadata
-LoF_Client/.settings/
-LoF_Client/Debug/LoF_Client
+LoF_Client_Core/.settings/
+LoF_Client_Core/Debug/LoF_Client_Core
+LoF_Client_Terminal/Debug/LoF_Client_Terminal
 LoF_Server/Debug/LoF_Server
