Initial commit of RT_Client_GTK
- A GTK interface to the Client_Core API
- No functionality this commit, just pops up a window

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ RTT_Client_Core/.settings/
 RTT_Client_Core/Debug/RTT_Client_Core
 RTT_Client_Terminal/Debug/RTT_Client_Terminal
 RTT_Server/Debug/RTT_Server
+RTT_Client_GTK/Debug/RTT_Client_GTK
