--- a/RTT_Client_GTK/.cproject
+++ b/RTT_Client_GTK/.cproject
@@ -54,6 +54,8 @@
 									<listOptionValue builtIn="false" value="/usr/lib/glibmm-2.4/include"/>
 									<listOptionValue builtIn="false" value="/usr/include/sigc++-2.0"/>
 									<listOptionValue builtIn="false" value="/usr/lib/sigc++-2.0/include"/>
+									<listOptionValue builtIn="false" value="../../RTT_Client_Core/src"/>
+									<listOptionValue builtIn="false" value="../../RTT_Common/src"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1010458151" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -119,6 +121,12 @@
 									<listOptionValue builtIn="false" value="sigc-2.0"/>
 									<listOptionValue builtIn="false" value="gobject-2.0"/>
 									<listOptionValue builtIn="false" value="gthread-2.0"/>
+									<listOptionValue builtIn="false" value="RTT_Common"/>
+									<listOptionValue builtIn="false" value="RTT_Client_Core"/>
+								</option>
+								<option id="gnu.cpp.link.option.paths.1491907197" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
+									<listOptionValue builtIn="false" value="../../RTT_Common/Debug"/>
+									<listOptionValue builtIn="false" value="../../RTT_Client_Core/Debug"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1835841875" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
