--- a/RTT_Ogre_3D/Debug/ogre.cfg
+++ b/RTT_Ogre_3D/Debug/ogre.cfg
@@ -3,8 +3,8 @@ Render System=OpenGL Rendering Subsystem
 [OpenGL Rendering Subsystem]
 Display Frequency=50 MHz
 FSAA=0
-Full Screen=Yes
+Full Screen=No
 RTT Preferred Mode=FBO
 VSync=Yes
-Video Mode=3840 x 1080
-sRGB Gamma Conversion=Yes
+Video Mode=1920 x 1080
+sRGB Gamma Conversion=No
