--- a/RTT_Ogre_3D/ogre_back.cfg
+++ b/RTT_Ogre_3D/ogre_back.cfg
@@ -2,9 +2,9 @@ Render System=OpenGL Rendering Subsystem
 
 [OpenGL Rendering Subsystem]
 Display Frequency=50 MHz
-FSAA=0
-Full Screen=No
+FSAA=8
+Full Screen=Yes
 RTT Preferred Mode=FBO
 VSync=Yes
-Video Mode=1920 x 1080
-sRGB Gamma Conversion=No
+Video Mode=3840 x 1080
+sRGB Gamma Conversion=Yes
