Sky, first tile, first character, a lights and shadows all set.  Next step, constructing first map!

--- a/RTT_Ogre_3D/resources.cfg
+++ b/RTT_Ogre_3D/resources.cfg
@@ -30,3 +30,8 @@ Zip=/usr/share/OGRE/media/packs/skybox.zip
 
 [General]
 FileSystem=/usr/share/OGRE/media
+
+[RTT]
+FileSystem=./assets/models
+FileSystem=./assets/materials
+FileSystem=./assets/materials/textures
