Fixed debug config files

--- a/RTT_Ogre_3D/Debug/resources.cfg
+++ b/RTT_Ogre_3D/Debug/resources.cfg
@@ -19,8 +19,6 @@ FileSystem=/usr/share/OGRE/media/PCZAppMedia
 FileSystem=/usr/share/OGRE/media/RTShaderLib
 FileSystem=/usr/share/OGRE/media/RTShaderLib/materials
 
-
-
 Zip=/usr/share/OGRE/media/packs/cubemap.zip
 Zip=/usr/share/OGRE/media/packs/cubemapsJS.zip
 Zip=/usr/share/OGRE/media/packs/dragon.zip
@@ -32,5 +30,8 @@ Zip=/usr/share/OGRE/media/packs/skybox.zip
 
 [General]
 FileSystem=/usr/share/OGRE/media
-#testing adding custom
-FileSystem=/home/mark/RTT/RTT_Ogre_3D/ogretest
+
+[RTT]
+FileSystem=./assets/models
+FileSystem=./assets/materials
+FileSystem=./assets/materials/textures
