Ogre: Support for Ogre3D in the global makefile
- Ogre3D now installs and uninstalls

--- a/RTT_Ogre_3D/resources_install.cfg
+++ b/RTT_Ogre_3D/resources_install.cfg
@@ -1,4 +1,4 @@
-#This is the version of resources.cfg as used in debugging
+#This is the version of resources.cfg as installed in the system
 
 # Resources required by the sample browser and most samples.
 [Essential]
@@ -34,6 +34,6 @@ Zip=/usr/share/OGRE/media/packs/skybox.zip
 FileSystem=/usr/share/OGRE/media
 
 [RTT]
-FileSystem=./assets/models
-FileSystem=./assets/materials
-FileSystem=./assets/materials/textures
+FileSystem=/usr/share/RTT/Ogre/assets/models
+FileSystem=/usr/share/RTT/Ogre/assets/materials
+FileSystem=/usr/share/RTT/Ogre/assets/materials/textures
