All: Half of messaging subsystem overhaul
- Introduces single socket design
- MessageManager class
- Message direction and sequence numbers

--- a/RTT_Common/.cproject
+++ b/RTT_Common/.cproject
@@ -95,9 +95,9 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="messages" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="messaging/messages|messages" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 						<entry excluding="messages|src" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src/messages"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src/messaging/messages"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
